--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 parking_lot = "0.12"
 lru = "0.10"
+bincode = "1.3"
 
 [dev-dependencies]
 temp-dir = "0.1"
